# myblog

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README_zh.md  note.md
.github/workflows/: daily_query.yml
ai/.claude/: CLAUDE.md
ai/claude/: claude_user.md
c&&c++/: ByteAlignment.c  c++_review.md  some-function-at-work.md
c&&c++/cmake/: cmake_FAQ.md
c&&c++/cmake/find_openssl_test/: CMakeLists.txt
c&&c++/coredump/: coredump.md  coredump_test.c
c&&c++/gdb/: gdb.md
c&&c++/libwebsockets/: libwebsockets_FAQ.md
c&&c++/log/logfile/: CMakeLists.txt  LogFile.cpp  LogFile.h  README.md  main.cpp
c&&c++/openssl/: openssl_FAQ.md
c&&c++/openssl/openssl_conan_check_HMAC_CTX_new/: CMakeLists.txt  main.c  output.md
c&&c++/openssl/openssl_test_clion/: CMakeLists.txt  README.md  main.c
c&&c++/review/cpp_lesson/: CMakeLists.txt  README.md
c&&c++/review/cpp_lesson/unit5/: example5_07.cpp  example5_07_think_01.cpp  example5_07_think_02.cpp
c&&c++/socket/socket_01_linux/: CMakeLists.txt  socket_client.c  socket_server.c  socket_server_mutile.c
c&&c++/socket/socket_mrcp_server/: CMakeLists.txt  README.md  mrcp_asr_server.c  mrcp_asr_server.h  socket_server_mutile.c
c&&c++/socket/udp/: udp_server_01.c
clion_comp282/: README.md
clion_comp282/task-3/: AdventureGame.cpp  CMakeLists.txt  Character.cpp  Character.h  Item.cpp  Item.h  Location.cpp  Location.h  debug.cpp  debug.h
docker/: 读书笔记_docker技术入门与实战.md
docs/: CHANGELOG.md  Gemfile  _config.yml  index.html  index.md
docs/_data/: navigation.yml
docs/_includes/footer/: custom.html
docs/_includes/head/: custom.html
docs/_pages/: about.markdown
docs/_posts/: 2024-04-05-welcome-to-jekyll.markdown
docs/_posts/ai/: 2026-05-17-what-and-how-ai-do.md
docs/_posts/blog/: 2024-04-18-config-github-pages.md  2025-03-13-theme-minimal-mistakes.md
docs/_posts/c&&cpp/: 2023-12-12-gdb-commands.md  2024-08-18-install-gcc-from-souce.md  2024-08-27-libasan.md  2024-08-31-cmake-commands.md  2024-11-14-coredump.md
docs/_posts/c-cpp/: 2023-12-12-gdb-commands.md  2024-05-18-IP-address-mismatch.md  2024-05-18-libwebsockets-build-ubuntu.md  2024-08-18-install-gcc-from-souce.md  2024-08-27-libasan.md  2024-08-31-cmake-commands.md  2024-11-14-coredump.md  wireshark_tls.md
docs/_posts/debian/: 2024-03-30-debian11.8-new-install-config.md  2024-08-18-debian11.8-where-is-static-ip.md  2024-08-18-debian12.4-new-install-config.md
docs/_posts/git/: 2024-06-04-git-command.md
docs/_posts/jekyll/: 2024-04-18-config-github-pages.md  2025-03-13-theme-minimal-mistakes.md
docs/_posts/libwebsockets/: 2024-05-18-IP-address-mismatch.md  2024-05-18-libwebsockets-build-ubuntu.md  wireshark_tls.md
docs/_posts/life/: 2024-10-01-redmi-note13-proplus.md  2025-09-27-songl-dmi-feelings.md  2026-01-18-thoughts.md  2026-05-07-digital-gadgets.md
docs/_posts/linux/: 2024-03-30-debian11.8-new-install-config.md  2024-05-17-openssl-build-install.md  2024-05-18-openssl-command-line.md  2024-06-04-git-command.md  2024-08-18-debian11.8-where-is-static-ip.md  2024-08-18-debian12.4-new-install-config.md  2024-12-04-dns-server-with-bind9.md  2025-03-03-ping-policy-routing.md  2025-04-08-process-of-network-packets.md  2025-05-24-laptop-ubuntu.md  2025-11-13-nfs.md
docs/assets/css/: main.scss
ffmpeg/: summary.md
ideas/: featurs_list.md
linux/: linux-common-commands.md
linux/cmake/: cmake_install_debian11.8.sh
linux/debian/: debian11.8.md  debian_note.md
linux/ebpf/: ebpf_hello.c  ebpf_note.md  ebpf_tc_ingress_01_kernel.c
linux/git/: git_FAQ.md
linux/openssl/: openssl_install_debian.sh
linux/openwrt/: tailscale.md
linux/ubuntu/: ubuntu_note.md
mds/: home_network.md  notepad++.md
project/clion_comp282/: README.md
python/: batch_rename.py  libwebsockets-test-server.key.pem  main_01.py  main_02.py  python_note.md  speech_server.py
python/BatteryGuard/: battery_guard.service  battery_guard_single_client.py  config.json  prompt.md  run.sh
python/MyTelegramBot/: .gitignore  CLAUDE.md  bot_config.py  bot_logger.py  my_telegram_bot.py  query_mobile_data.py
python/PythonLearn/: 01_basic_grammar.py  PythonLearn.md
python/TelegramGroupMessageAssistant/: CLAUDE.md  design.md
python/http_auth_server/: auth_server.py  libwebsockets-test-server.pem
python/mijia-api/: README.md  action-client.py  action-server.py  login.py  query.py
python/tts_asr_server_demo/: tts_asr_websocket_server_01.py
windows/: get_timestamp.cmd  laptop_get_battery_status.bat  postman.md
windows/batch_rename/: batch_rename_1.bat  batch_rename_2.bat
windows/ip/: ip.bat  set_ip.bat  set_ip_dhcp.bat  set_ip_static.bat
windows/ping/: REDAME.md  ping.vbs  start_ping_baidu.cmd  start_ping_gateway.cmd
ws-client-send-recv-tls/: CMakeLists.txt  ws-client-send-recv-tls.c  ws-tools.c
ws-client-tools/: CMakeLists.txt  ws-client-core.c  ws-client-core.h  ws-client-interface.c  ws-client-interface.h  ws-client-main.c  ws-main.c  ws-tools.c  ws-tools.h  ws-utils.c  ws-utils.h
ws-server-asr/: CMakeLists.txt  README.md  ws-server-framework.c  ws-tools.c  ws-tools.h
ws-server-simple-send-recv-tls/: CMakeLists.txt  ws-server-simple-send-recv-tls.c
ws-server-tts-asr/: CMakeLists.txt  README.md  ws-server-core.c  ws-server-core.h  ws-server-framework.c  ws-server-tts-asr.h  ws-tools.c  ws-tools.h
(+30 files in other folders)
