cmake_minimum_required(VERSION 3.25)
project(cpp_lession)

set(CMAKE_CXX_STANDARD 11)

add_executable(example4_01 unit4/main.cpp )
add_executable(example5_07 unit5/example5_07.cpp)
add_executable(example5_07_think_01 unit5/example5_07_think_01.cpp)
add_executable(example5_07_think_02 unit5/example5_07_think_02.cpp)
